--- a/end.html
+++ b/end.html
@@ -13,7 +13,7 @@
       <div id="end" class="flex-center flex-column">
         <h1 id="finalScore"></h1>
         <div>
-          <p>\( * 0 *)/ </br> The quiz is finished. </br> Save your score here.</p>
+          <p><h2>\( * 0 *)/</h2> </br> <h2>The quiz is finished.</h2> </br> <h3>Save your score here.</h3></p>
         </div>
         <form>
           <input
@@ -24,7 +24,7 @@
           />
           <button
             type="submit"
-            class="button"
+            class="btn"
             id="saveScoreBtn"
             onclick="saveHighScore(event)"
             disabled
@@ -32,7 +32,7 @@
             Save
           </button>
         </form>
-        <a class="button" href="quiz.html">Try Again?</a>
+        <a class="btn" href="quiz.html">Try Again?</a>
         
       </div>
     </div>
