--- a/end.html
+++ b/end.html
@@ -32,7 +32,7 @@
             Save
           </button>
         </form>
-        <a class="btn" href="quiz.html">Try Again?</a>
+        <a class="btn" href="index.html">Try Again?</a>
         
       </div>
     </div>
