--- a/end.html
+++ b/end.html
@@ -32,7 +32,7 @@
             Save
           </button>
         </form>
-        <a class="btn" href="https://github.com/S-Osman4/quizapp.github.io/blob/main/index.html">Try Again?</a>
+        <a class="btn" href="/index.html">Try Again?</a>
         
       </div>
     </div>
